--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install Rust (rustup)
       run: rustup update ${{ matrix.rust }} --no-self-update && rustup default ${{ matrix.rust }}
       shell: bash
-    - run: cargo test --no-default-features
+#    - run: cargo test --no-default-features
     - run: cargo test
     - run: cargo run --manifest-path systest/Cargo.toml
     - run: cargo test --manifest-path git2-curl/Cargo.toml
