--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,8 @@ jobs:
             rust: stable
     steps:
     - uses: actions/checkout@master
+      with:
+        ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
     - name: Install Rust (rustup)
       run: rustup update ${{ matrix.rust }} --no-self-update && rustup default ${{ matrix.rust }}
       shell: bash
