--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libgit2-sys/libgit2"]
 	path = libgit2-sys/libgit2
-	url = git@github.com:springuptech/libgit2.git
+	url = https://github.com/springuptech/libgit2.git
